next
Warning: this version is not backwards compatible to 0.6.

[+] Method chaining.
[+] New syntax: $posts = Post::model()->taggedWith(array('php', 'yii'))->findAll(); 
[*] Added parent:: calls in event handlers.
[+] Added hasTags() and it's alias hasTag() to check if all tags specified are attached to current model.
[+] New syntax: echo $post->tags (or by what name behaviour is attached) will print comma separated tags.
[*] getTags now returns array since implode is really easy to do yourself.
[-] Removed getTagsArray().
[*] addTags(), removeTags(), setTags(), findAllByTags(), getCountByTags() are now accept both string and array. 
[+] Added addTag() as alias of addTags(), removeTag() as alias of removeTags().
[*] Some methods are now protected.
[*] Added $with to findAllByTags().
[+] getAllTags().
[+] Unit tests.
[+] createTagsAutomatically option allows to throw exception when adding nonexisting tag. 

0.6
[+] Initial public release.